<resources>
    <string name="app_name">Barbu</string>
    <string name="north">North</string>
    <string name="west">West</string>
    <string name="east">East</string>
    <string name="south">South</string>
    <string name="ace_of_clubs_description">ace_of_clubs</string>
    <string name="ace_of_diamonds_description">ace_of_diamonds_description</string>
    <string name="ace_of_hearts_description">ace_of_hearts_description</string>
    <string name="ace_of_spades_description">ace_of_spades_description</string>
    <string name="king_of_hearts_description">king_of_hearts_description</string>
    <string name="play">Play</string>
    <string name="start">Start Human</string>
    <string name="new_game">New Game</string>
    <string name="end">End</string>
    <string name="northname">northName</string>
    <string name="zero">0</string>
    <string name="westname">westName</string>
    <string name="eastname">eastName</string>
    <string name="southname">southName</string>
    <string name="northcard">northCard</string>
    <string name="westcard">westCard</string>
    <string name="eastcard">eastCard</string>
    <string name="southcard">southCard</string>
    <string name="textview">TextView</string>
    <string name="start_random">START RANDOM</string>
</resources>