<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/idMainConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#8BC34A"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/idNorthName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/north"
            android:textColor="#004D40"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/idEstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/west"
            android:textColor="#004D40"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/idSouthName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/idEastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/east"
            android:textColor="#004D40"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/idSouthName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center|center_vertical"
            android:text="@string/south"
            android:textColor="#004D40"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/rvHand"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvHand"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:foregroundGravity="center_horizontal"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/idSouthName">

        </androidx.recyclerview.widget.RecyclerView>

        <ImageView
            android:id="@+id/northCard"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:contentDescription="@string/southcard"
            app:layout_constraintBottom_toTopOf="@+id/idEstName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idNorthName"
            app:layout_constraintVertical_bias="0.8"
            app:srcCompat="@drawable/ace_of_clubs" />

        <ImageView
            android:id="@+id/southCard"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:contentDescription="@string/northcard"
            app:layout_constraintBottom_toTopOf="@+id/idSouthName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idEstName"
            app:layout_constraintVertical_bias="0.19999999"
            app:srcCompat="@drawable/ace_of_clubs" />

        <ImageView
            android:id="@+id/westCard"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:contentDescription="@string/westcard"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/idEastName"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toEndOf="@+id/idEstName"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ace_of_clubs" />

        <ImageView
            android:id="@+id/eastCard"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:contentDescription="@string/westcard"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/idEastName"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toEndOf="@+id/idEstName"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ace_of_clubs" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
